separation of tasks

--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -98,7 +98,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
-                        @Html.TextAreaFor(model => model.description, new { @class = "form-control" } )
+                        @Html.TextAreaFor(model => model.description, new { @class = "form-control" ,@id="area2" } )
                         @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -151,4 +151,20 @@
 
         @section Scripts {
             @Scripts.Render("~/bundles/jqueryval")
+@Scripts.Render("~/bundles/nicedit")
+<script>
+
+
+        bkLib.onDomLoaded(function () {
+
+            //nicEditors.allTextAreas();
+            new nicEditor({
+                //  fullPanel: true,
+                buttonList: ['fontSize', 'bold', 'italic', 'underline', 'strikeThrough', 'subscript', 'superscript', 'left', 'center', 'right', 'justify', 'ol', 'ul', 'subscript', 'superscript', 'strikethrough', 'removeformat', 'indent', 'outdent', 'hr', 'forecolor', 'bgcolor']
+            }).panelInstance('area2');
+            //nicEditors.findEditor('myArea2');
+        });
+            </script>
+
+
         }
