--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -4,11 +4,9 @@
 @using appenums = CatchMe.Helpers.AppEnums
 @{
     ViewBag.Title = "Catch Me";
-
-    
 }
 
-<div>
+@*<div>
     <div class="pull-left"><h2>@session.Current.CurrentProject</h2></div>
     <div class="pull-right" style="margin-top:20px;">
        @if(session.Current.MyProjects.Count() > 1)
@@ -16,8 +14,9 @@
         @Html.DropDownList("project_id", null, htmlAttributes: new { @class = "projectselect pull-right changeproject" })           
        }
     </div>
-</div>
-                      <div class="wrapper">
+</div>*@
+                     
+     <div id="wrapper">
 
 
 
@@ -97,7 +96,7 @@
 
 
             $('#tasklisttable').DataTable({
-                    "dom": '<"top"i>rt<"bottom"flp><"clear">'
+//                "dom": '<"wrapper"flipt>'
                 });
 
             //$(".projectselect").select2({
