--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -6,128 +6,134 @@
     ViewBag.Title = "Catch Me";
 }
 
-@*<div>
+<div>
     <div class="pull-left"><h2>@session.Current.CurrentProject</h2></div>
-    <div class="pull-right" style="margin-top:20px;">
+    <div class="pull-right" style="margin-top:20px;"> <span class="text-muted">change project:</span>
        @if(session.Current.MyProjects.Count() > 1)
        {           
         @Html.DropDownList("project_id", null, htmlAttributes: new { @class = "projectselect pull-right changeproject" })           
        }
     </div>
-</div>*@
-                     
-     <div id="wrapper">
+</div>
+<div style="clear:both"></div>
+<hr />
 
 
 
-                          <table class="table" id="tasklisttable">
-                              <thead>
-                                  <tr>
-                                      <th>
-                                          Id
-                                      </th>
-
-                                      <th>
-                                          Type
-                                      </th>
-                                      <td>
-                                          type
-                                      </td>
-
-                                      <th>
-                                          Assigned To
-                                      </th>
-                                      <th>
-                                          @Html.DisplayNameFor(model => model.priority)
-                                      </th>
-                                      <th>
-                                          @Html.DisplayNameFor(model => model.due_date)
-                                      </th>
-
-                                      <th></th>
-                                  </tr>
-                              </thead>
-
-                              <tbody>
-                                  @foreach (var item in Model)
-                                  {
-                                      <tr>
-                                          <td>
-                                              <span class="text-muted">#@item.task_id</span>
-                                          </td>
-                                          <td title="@item.TypeDesc"><span style="padding:7px 2px;" class="label label-default"><span style="font-size:1.5em" class="fa fa-fw fa-@(item.typeIcon)"></span></span> </td>
-                                          <td>
-                                              <div class="readmore">
-                                                  <div class="rectangle @item.StateColor"></div><a href="@Url.Action("EditTask", new { id = item.task_id })">@Html.DisplayFor(modelItem => item.title)</a>
-                                              </div>
-
-                                          </td>
-                                          <td>
-                                              @{ var assignee = item.user == null ? "Unassigned" : item.user.fullname; }
-                                              @assignee
-                                          </td>
-                                          <td>
-                                              @Html.DisplayFor(modelItem => item.PriorityDesc)
-                                          </td>
-                                          <td>
-                                              @Html.DisplayFor(modelItem => item.due_date)
-                                          </td>
-
-                                          <td>
-                                              <a href="@Url.Action("EditTask", new {  id = item.task_id})"><span class="fa fa-edit"></span> </a>
-                                              <a href="@Url.Action("DeleteTask", new {  id = item.task_id})"><span class="fa fa-trash"></span> </a>
-
-                                          </td>
-                                      </tr>
-                                  }
-                              </tbody>
-                          </table>
-                      </div>
-
-@section scripts {
-
-@Scripts.Render("~/bundles/datatables")
 
 
-    <script>
+        <table class="table" id="tasklisttable">
+            <thead>
+                <tr>
+                    <th>
+                        Id
+                    </th>
+
+                    <th>
+                        Type
+                    </th>
+                    <td>
+                        type
+                    </td>
+
+                    <th>
+                        Assigned To
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.priority)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.due_date)
+                    </th>
+
+                    <th></th>
+                </tr>
+            </thead>
+
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            <span class="text-muted">#@item.task_id</span>
+                        </td>
+                        <td title="@item.TypeDesc"><span style="padding:7px 2px;" class="label label-default"><span style="font-size:1.5em" class="fa fa-fw fa-@(item.typeIcon)"></span></span> </td>
+                        <td>
+                            <div class="readmore">
+                                <div class="rectangle @item.StateColor"></div><a href="@Url.Action("EditTask", new { id = item.task_id })">@Html.DisplayFor(modelItem => item.title)</a>
+                            </div>
+
+                        </td>
+                        <td>
+                            @{ var assignee = item.user == null ? "Unassigned" : item.user.fullname; }
+                            @assignee
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.PriorityDesc)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.due_date)
+                        </td>
+
+                        <td>
+                            <a href="@Url.Action("EditTask", new {  id = item.task_id})"><span class="fa fa-edit"></span> </a>
+                            <a href="@Url.Action("DeleteTask", new {  id = item.task_id})"><span class="fa fa-trash"></span> </a>
+
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
 
-        $(document).ready(function () {
 
 
-            $('#tasklisttable').DataTable({
-//                "dom": '<"wrapper"flipt>'
+    @section scripts {
+
+        @Scripts.Render("~/bundles/datatables")
+
+
+        <script>
+
+
+            $(document).ready(function () {
+
+
+                $('#tasklisttable').DataTable({
+                   
+                    "pageLength": 50
+
                 });
 
-            //$(".projectselect").select2({
-            //    minimumResultsForSearch: Infinity
-            //});
+                //$(".projectselect").select2({
+                //    minimumResultsForSearch: Infinity
+                //});
 
 
-            
-
-            $('body').on('change', '.changeproject', function () {
-                var project_id = $(this).val();
-                alert(project_id);
 
 
-                // similar behavior as an HTTP redirect
-                window.location.replace(getVirtualDir()+"Tasks/Tasklist/"+project_id);
+                $('body').on('change', '.changeproject', function () {
+                    var project_id = $(this).val();
+                    alert("Changing Project");
 
-                // similar behavior as clicking on a link
-                //window.location.href = "http://stackoverflow.com";
-                
+
+                    // similar behavior as an HTTP redirect
+                    window.location.replace(getVirtualDir() + "Tasks/Tasklist/" + project_id);
+
+                    // similar behavior as clicking on a link
+                    //window.location.href = "http://stackoverflow.com";
+
+                });
+
+
+                //$('.readmore').readmore({
+                //    speed: 75,
+                //    collapsedHeight: 40,
+                //    lessLink: '<a href="#">Read less</a>'
+                //});
+
+
             });
 
-
-            //$('.readmore').readmore({
-            //    speed: 75,
-            //    collapsedHeight: 40,
-            //    lessLink: '<a href="#">Read less</a>'
-            //});
-
-
-        });
-
-    </script>
+        </script>
     }
